--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 <body>
 <!-- 测试注释 -->
   <h1>测试内容ssdfefsdfsdfdfs</h1>
+  发v疯女风v奶粉hi v你的房间看v那地方错误的出发点v阿斯蒂芬
   <script src="scripts/all.js"></script>
 </body>
 
